# LarvalBase

./: .mcp.json  CLAUDE.md  CLAUDE.md.backup-v5.0.3  COMMANDS.md  README.md  apply-improvements.sh  claude-brainstorm.bat  claude-brainstorm.ps1  claude-fix.ps1  composition-tracker.sh  init-analysis-manifest.sh  init-manifest.sh  install.ps1  jsonl-stream.sh  module-health.sh  newFeature-pipeline.sh  package-lock.json  package.json  pipeline  pipeline-windows.ps1  resume-brainstorm.sh  run-analyze-pipeline.sh  run-step-v2.sh  run-step.sh.bak  start-phase1.ps1  start-pipeline.ps1  start-pipeline.sh  sync-version.sh  todo-monitor.sh  update-manifest.sh  v4-pipeline-specification.md  windows-local.sh  windows-proxy-orchestrator.sh  windows-supervisor.ps1
.claude/: CLAUDE.md
.dev-log/: current-state.md
.pipeline/: checkpoint.json  pipe-send.js
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
Discord-Pipeline-Projects/: audit-cross-correlation-2026-02-17.md  audit-report-2026-02-17.md
Pipeline v7/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
Pipeline v8/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
agent/: package.json
analysis-pipeline/: run-analysis-phase-c.cjs
archive/: pipeline  (+31 more)
archive/2025-12-09-cleanup/test-projects/counter-desktop-test-2/src-tauri/: Cargo.toml  tauri.conf.json
archive/2025-12-09-cleanup/test-projects/counter-desktop-test-2/src-tauri/capabilities/: default.json
archive/2025-12-09-cleanup/test-projects/counter-desktop-test-2/src-tauri/src/: lib.rs  main.rs
(+1280 files in other folders)
