[package]
name = "counter-desktop-app"
version = "1.0.0"
description = "A simple counter desktop app with login"
authors = ["you"]
edition = "2021"

[lib]
name = "counter_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
